# codeflix-fullcycle

codeflix-micro-videos/: .gitignore  Dockerfile  api.http  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
codeflix-micro-videos/.devcontainer/: devcontainer.json
codeflix-micro-videos/.docker/zsh/powerlevel10k/: .p10k.zsh
codeflix-micro-videos/src/__seedwork/application/: dto.py  use_cases.py
codeflix-micro-videos/src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
codeflix-micro-videos/src/__seedwork/tests/integration/domain/: test_int_validators.py
codeflix-micro-videos/src/__seedwork/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py  test_use_cases.py
codeflix-micro-videos/src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
codeflix-micro-videos/src/category/application/: dto.py  use_cases.py
codeflix-micro-videos/src/category/domain/: entities.py  repositories.py  validators.py
codeflix-micro-videos/src/category/infra/: repositories.py
codeflix-micro-videos/src/category/tests/application/: test_dto.py  test_unit_use_cases.py
codeflix-micro-videos/src/category/tests/domain/: test_entities.py
codeflix-micro-videos/src/category/tests/infra/: test_unit_repositories.py
codeflix-micro-videos/src/category/tests/integration/domain/: test_int_entities.py
codeflix-micro-videos/src/category/tests/unit/application/: test_dto.py  test_unit_dto.py  test_unit_use_cases.py
codeflix-micro-videos/src/category/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py
codeflix-micro-videos/src/category/tests/unit/infra/: test_unit_repositories.py
codeflix-micro-videos/src/core/__seedwork/application/: dto.py  use_cases.py
codeflix-micro-videos/src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
codeflix-micro-videos/src/core/__seedwork/tests/integration/domain/: test_int_validators.py
codeflix-micro-videos/src/core/category/application/: dto.py  use_cases.py
codeflix-micro-videos/src/core/category/domain/: entities.py  repositories.py  validators.py
codeflix-micro-videos/src/core/category/infra/django/: api.py  apps.py  mappers.py  models.py  repositories.py  urls.py
codeflix-micro-videos/src/core/category/infra/in_memory/: repositories.py
codeflix-micro-videos/src/django_app/: container.py  settings.py  urls.py
(+18 files in other folders)
