[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kaique Moreira", email = "kaiquemoreiracloud@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.13.1",
    "pytest-cov>=3.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.14.1",
    "pytest>=7.1.2",
]
[tool.pdm.scripts]
test = "pytest --ignore __pypackages__"
test_cov = "pytest --ignore __pypackages__ --cov ./src --cov-fail-under 80"
test_cov_html = "pytest --ignore __pypackages__ --cov ./src --cov-report html:./__coverage"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
